--- a/fundamentos/secao-03-introducao-a-html-e-css/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista De Amigos</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <h1>amizades que construi na <a href="https://www.betrybe.com/">trybe</a></h1>
-    <p>Shinji</p>
-    <p>Felipe Tavares</p> 
-    <p>Giovana</p> 
-    <p>Felipe Tavares</p>
-    <p>Ivory </p>
-    <p>Arn</p>
+    <p><a href="https://github.com/sh1nj12code">Shinji</a></p>
+    <p> <a href="https://github.com/xfelipetavares">Felipe Tavares</a></p> 
+    <p> <a href="https://github.com/GiovannaSDJ"> Giovana</a></p> 
+    <p><a href="https://github.com/felipetfernandes"></a> Felipe Tavares</p>
+    <p><a href=""></a> Ivory </p>
+    <p><a href="https://github.com/ArnDantas">Arn</a></p>
+    <p>Jõao Pedro</p>
 </body>
 </html>
