acrescentei um link pro gitHub dos meus amigos

--- a/fundamentos/secao-03-introducao-a-html-e-css/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/index.html
@@ -12,7 +12,7 @@
     <p><a href="https://github.com/sh1nj12code">Shinji</a></p>
     <p> <a href="https://github.com/xfelipetavares">Felipe Tavares</a></p> 
     <p> <a href="https://github.com/GiovannaSDJ"> Giovana</a></p> 
-    <p><a href="https://github.com/felipetfernandes"></a> Felipe Tavares</p>
+    <p><a href="https://github.com/felipetfernandes">Felipe Tavares</a></p>
     <p><a href=""></a> Ivory </p>
     <p><a href="https://github.com/ArnDantas">Arn</a></p>
     <p>Jõao Pedro</p>
