--- a/fundamentos/secao-03-introducao-a-html-e-css/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/index.html
@@ -11,12 +11,12 @@
     <img src="gif/amigos-unscreen.gif" alt="">
     <h1>Amizades que construi na <a href="https://www.betrybe.com/">trybe</a></h1>
     <p><a href="https://github.com/sh1nj12code">Shinji</a>: Um carinha sangue bom que sempre ajuda os miliores e que é de poucas palavras kk</p>
-    <p> <a href="https://github.com/xfelipetavares">Felipe Tavares</a>: Um burguês reclamão sulista full pistola e por encraça que parivel é muito gente boa, não tem sotaque forte, ajuda demaiss e foi a primeira amizade que fiz hihi</p> 
+    <p> <a href="https://github.com/xfelipetavares">Felipe Tavares</a>: Um burguês reclamão sulista full pistola e por encreça que parivel é muito gente boa, não tem sotaque forte, ajuda demaiss e foi a primeira amizade que fiz hihi</p> 
     <p> <a href="https://github.com/GiovannaSDJ"> Giovana</a> Que vibe da gio cara kkk. É um icone, super gentil e engraçada adora gatos e tem as melhores figurinhas.</p> 
     <p><a href="https://github.com/felipetfernandes">Felipe Tavares</a>: Tem que rexxxxpeitar a risada do carioquinha engraçadalho pra carilho</p>
     <p><a href="">Ivory</a>: Um cara gentil, inteligente e tão sucinto quanto minha descrição sobre ele '-'</p>
     <p><a href="https://github.com/ArnDantas">Arn</a>: mora do meu lado cara, qual a probabilidade aksjaks amigueiro demaiiss e minha parceria em Aju</p>
-    <p> <a href="">Jõao Pedro</a>: Muito tranquilo, gente fina e adorei faz os desafios do inicio do curso com ele.</p>
+    <p> <a href="">Jõao Pedro</a>: Muito tranquilo, gente fina e adorei fazer os desafios do inicio do curso com ele.</p>
     <p> <a href="https://github.com/Jeanfipke">Jennas</a>: jennas... é o jennas.</p>
 </body>
 </html>
