--- a/fundamentos/secao-03-introducao-a-html-e-css/html semântico/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/html semântico/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
+        <h2>Soco a 80km/h: Conheça o Stomatopoda.</h2>
         <nav>
             <ul class="menu">
                 <li> <a href="#">Página Inicial</a></li>
@@ -18,44 +18,45 @@
             </ul>
         </nav>
     </header>
-        <article>
-            <h2>Fatos sobre o Stomatopoda</h2>
+    <main>
+        <article class="artigo">
+            <h1>Fatos sobre o Stomatopoda</h1>
             <h3>Soco mortal</h3> 
-                <p>O Odontodactylus scyllarus tem um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720 km/h) e uma pressão de impacto de 600 N/cm². Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.</p>
+               <p>O Odontodactylus scyllarus tem um soco que pode apresentar a velocidade de um tiro calibre .22 (equivalente a 720 km/h) e uma pressão de impacto de 600 N/cm². Essa força esmagadora é a responsável pelo seu título de "lagosta-boxeadora" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.</p>
         </article>
     
-    <section>
-        <h3>informações gerais sobre o Stomatopoda</h3>
-        <p>Seu nome científico: Odontodactylus scyllarus</p>
-        <p>Reino: Animalia</p>
-        <p>Filo: Arthropoda</p>
-        <p>Subfilo:	Crustacea</p>
-        <p>Ordem: crustáceos marinhos</p>
-        <p>Subclasse: hoplocarida</p>
-    </section>
-    <section class="predadores">
-        <h3>Preadores ativos</h3>
-        <img src="img/predador.jpg" width="300px" alt="">
-        <p>São animais  <strong>exclusivamente carnívoros</strong>, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem. O segundo par de patas, muito desenvolvido, é usado tanto para atacar a presa como para se defender. 
-        </p>  
-    </section>
-    <section class="visão">
-        <h3>Sistema de visão</h3>
-        <img src="img/visãoStomatopoda.jpeg" alt="">
-        <p>Esses animais <strong>possuem o mais complexo sistema de visão de cores do mundo animal</strong>, pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos presentes em sua retina.
-        </p>
-    </section>
-    <section class="referencias">
-        <h3>Referências Bibliográficas</h3>
-            <ul>
-                <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a></li>
-                <li><a href="https://theoatmeal.com/comics/mantis_shrimp">The Oatmeal</a></li>
-            </ul>
-    </section>
+        <section class="infos">
+            <h3>informações gerais sobre o Stomatopoda</h3>
+            <p>Seu nome científico: Odontodactylus scyllarus</p>
+            <p>Reino: Animalia</p>
+            <p>Filo: Arthropoda</p>
+            <p>Subfilo:	Crustacea</p>
+            <p>Ordem: crustáceos marinhos</p>
+            <p>Subclasse: hoplocarida</p>
+        </section>
+
+        <section class="predadores">
+            <h3>Preadores ativos</h3>
+            <img src="img/predador.jpg" width="300px" alt="">
+            <p>São animais  <strong>exclusivamente carnívoros</strong>, alimentando-se de camarões, caranguejos, moluscos, peixes e até mesmo outros da mesma ordem. O segundo par de patas, muito desenvolvido, é usado tanto para atacar a presa como para se defender. 
+            </p>  
+        </section>
+        <section class="visão">
+            <h3>Sistema de visão</h3>
+            <img src="img/visãoStomatopoda.jpeg" alt="">
+            <p>Esses animais <strong>possuem o mais complexo sistema de visão de cores do mundo animal</strong>, pois enxergam 12 cores primárias, correspondentes aos 12 pigmentos distintos presentes em sua retina.
+            </p>
+        </section>
+        <section class="referencias">
+            <h3>Referências Bibliográficas</h3>
+                <ul>
+                    <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda">Wikipedia</a></li>
+                    <li><a href="https://theoatmeal.com/comics/mantis_shrimp">The Oatmeal</a></li>
+                </ul>
+        </section>
+    </main>
     <footer>
-        <div>
-            "Conteúdo compilado por <a href="https://githubcomJainefranciellem">Franciellem</a>, 2022".
-        </div>
+            <p>"Conteúdo compilado por <a href="https://githubcomJainefranciellem">Franciellem</a>, 2022".</p> 
     </footer>
 
 </body>
