--- a/fundamentos/secao-03-introducao-a-html-e-css/html semântico/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/html semântico/index.html
@@ -60,11 +60,14 @@
     <section class="referencias">
         <h3>Referências Bibliográficas</h3>
             <ul>
-                <li><a class="links" href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank">Wikipedia</a></li>
-                <li><a class="links" href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank">The Oatmeal</a></li>
+                <p class="link">
+                    <li><a class="links" href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank">Wikipedia</a></li>
+                    <li><a class="links" href="https://theoatmeal.com/comics/mantis_shrimp" target="_blank">The Oatmeal</a></li>
+                </p>
+                
             </ul>
     </section>
-    <footer>
+    <footer class="footer">
             <p>"Conteúdo compilado por franciellem, 2022".</p> 
     </footer>
 
